correct missing color code

--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ h1 {
 h2 {
   font-size: 18px;
   margin: 0;
-  color:
+  color: #4d4b4b;
 }
 
 h3 {
